ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oncall-ingress
  annotations:
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "1000"
    nginx.ingress.kubernetes.io/session-cookie-path: "/" 
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: oncall.local
      http:
        paths:
          - path: "/(.*)"
            pathType: Prefix
            backend:
              service:
                name: oncall
                port:
                  number: 8080
